<resources>
    <string name="app_name">Emergency_maps</string>
    <string name="logo_name">cppk_logo</string>
    <string name="akb">Акб</string>
    <string name="vspom_сompr">Вспом компр</string>
    <string name="drive">Тяга</string>
    <string name="bv">БВ, КЗ</string>
    <string name="protect">Защита</string>
    <string name="safety_device">Приб без</string>
    <string name="loop">Петля</string>
    <string name="pantograph">Токопр</string>
    <string name="gl_сompr">Глав компр</string>
    <string name="ast">АСТ</string>
    <string name="sot">СОТ</string>
    <string name="supply_voltage">Снятие U</string>
    <string name="title_text">Аварийные карты Демиховского Машиностроительного Завода для электропоезда серии ЭП2Д</string>
    <string name="dop_info">Дополнительная информация</string>
    <string name="akb_title">Проверку состояния аккумуляторных батарей необходимо производить по монитору УПУ обращая внимание на напряжение АБ, заряд, а также на сообщения о состоянии АБ на панели ЦСО. Про отсутствие заряда АБ в головном вагоне так же сообщит речевой информатор КТОС-ПОС в кабине. Дополнительно состояние АБ необходимо проверять в шкафу №4 головного и прицепного вагона №3 по амперметрам и вольтметрам. Необходимо следить за состоянием СЗН-ЗУ в шкафу №5 головного и №4 прицепного вагонов по индикаторам "Работа", "Заряд", "Отказ ДТ". </string>
    <string name="akb_not_U">При включении АБ нет напряжения 110В </string>
    <string name="akb_checks">Проверить Q29, Q30, плохой контакт в 15 - 15Ф контактора БК;Проверить СЗН-ЗУ по индикации ламп «Работа» и «Питание», автоматы на СЗНе Q1,Q2 (Q3),проверить автомат Q2 «Выпрямитель», СЗН может зависнуть и показывать исправную работу, его надо перезагрузить путем выключения автоматов СЗН Q1, Q2 и  Q2»Выпрямитель», и вытащить разъем СЗН Х6, через 30 секунд включить все в обратной последовательности</string>
<string name="akb_low">На батареях всего поезда пониженное напряжение (менее 80 В) </string>
    <string name="akb_low1">На одном из вагонов неполное к.з. в проводах 15-30 или это свидетельствует о закороченных контактах реле КЗБ (СЗН провода 15Ф/15ФГ), низком уровне заряда АКБ, либо наличии мощной нагрузки в бортовой сети (включен всп.компр. итд). Выключить Q13 по всему поезду и определить неисправную секцию </string>
    <string name="akb_work_q29">При включении АБ срабатывают автоматы Q29 или Q30 </string>
    <string name="akb_work_q29_1">Пробой диодов выпрямителя V1-V6. Выключить автомат Q2 «Выпрямитель», выключить БК принудительно, подать питание с провода 15Ф на 15ФГ</string>
    <string name="akb_work_q29_2">К.з. в цепи проводов 15-30. Выключить автомат Q2 «Выпрямитель», выключить АБ</string>
    <string name="akb_not_110">Нет питания 110В от соседних секций </string>
    <string name="akb_not_110_1">Проверить Q13 на неисправной секции, а также на соседних секциях. Дополнительно проверить состояние межвагонных соединений (сцеплены/расцеплены)</string>
    <string name="akb_not_kzb">При низком заряде АБ и нажатием кн. "Вкл АКБ" на СЗН, контактор КЗБ не замыкается. </string>
    <string name="akb_not_kzb1">Принудительно включить контактор КЗБ, произвести запуск преобразователя/ПСН, убедиться, что на проводе 15ЭА есть питание (+110В), только в этом случае повторно нажать кнопку «Вкл. АКБ» на СЗН, а в случае не включения КЗБ на время до перемещения поезда в депо, допускается установка электрического проводника на клеммы контактора КЗБ (при отключении преобразователя/ПСН временное электрическое соединение необходимо демонтировать!). СЗН автоматически отключает положительный потенциал АКБ от бортовой сети вагона при падении напряжения бортовой сети ниже 94-96В, проводить работы по восстановлению заряда АКБ вагона нужно проводить именно при этих показаниях и не допускать более глубокий разряд (глубокие разряды АКБ приводят к досрочному выходу из строя элементов АКБ)</string>
    <string name="not_1vspomc">Не работает компрессор на одном из вагонов </string>
    <string name="not_1vspomc1">Отсутствие наполнения напорной магистрали воздухом при работающем двигателе – проверить правильности положений рукояток кранов в шкафу управления №1.  </string>
    <string name="not_1vspomc2">Нет запуска двигателя всп. компрессора – проверяем наличие питания (110В) в цепи проводов 15 и 13 в шкафу № 1 моторного вагона,проверить АЗВ Q22,  включено или нет реле РВК (если не включено поджать руками, проверить запуск), если включено реле РВК, а всп.компр. не работает - запись в ТУ-152 пользоваться остальными (при необходимости наполнять "мешок").Если реле РВК не включено, а питание на проводе 13А есть, то надо вскрыть реле давления (РД) и убедится в наличии контакта между подвижным и неподвижным контактами, восстановить эл. соединение между контактами. </string>
    <string name="not_oll_vspomc">Компрессоры не включаются по всему поезду</string>
    <string name="not_oll_vspomc_do">Проверить Q50 на пульте управления, положение переключателя В10 Управление из шкафа/Управление из кабины (моторный вагон), обрыв провода 13 в первой межвагонке (управлять включением из хвостовой кабины). Проверить исправность кнопки "Всп компр" в кабине</string>
    <string name="not_drive">Не собирается схема тяги в том числе с БРУ</string>
    <string name="not_drive_bru">Если не собирается схема тяги в первую очередь попробовать привести поезд в движение с БРУ, после проверить ФУСы на предмет перегорания и воспользоваться кнопкой «Вкл ВДА». При сборе аварийных схем пользоваться электрическим торможением запрещается, поезд ведется только на ЭПТ.</string>
    <string name="not_drive_diagnostics">Диагностика </string>
    <string name="not_drive_diagnostics_do">После постановки БКМ в тяговую позицию нет сбора схемы тяги. Давление в ТМ 4,5-4,8. ППТ в положении «голова». Двери закрыты индикатор на «двери» горит. Индикатор БВ и РН погашены. Вспомогательные машины включены. «Q54» включен.</string>
    <string name="transition_bru">Переход на БРУ </string>
    <string name="transition_bru_do">Сорвать пломбу и открыть крышку. Перевести переключатель в положение БРУ. Реверсивную рукоятку из БКМ, вставить в гнездо БРУ и повернуть в положение «Вперед»</string>
    <string name="transition_bru_q54">Сработал Q54 - восстановить, неисправен выключатель ВУ ( поставить перемычку на тумблер ВУ) </string>
    <string name="not_work_bru">Нет включения КВХ </string>
    <string name="not_work_bru_do">Проверить контакт ЭПК неоднократным поворотом ключа. Принудительно (вручную) включить КВХ. Произвести отключение ВДА.Принудительно подать питание на провода 2 и 11 и вручную однократно нажать ПРК (для ЭП2Д).</string>
    <string name="not_drive1">Не собираются цепи режима тяги, вспомогательные машины работают, лампа ЛКиТ не сигнализирует </string>
    <string name="not_drive1_do1">Выключить и через 25 - 30 сек. вновь включить ВУ, восстановить защиту. Проверить есть ли сбор схемы «тяга» при постановке реверсивной рукоятки «назад» </string>
    <string name="not_drive1_do2">Уставновить главную рукоятку БКМ в положение "М". По вкладке "Пульт-управления" на экране блока ДС-1 машиниста проверить наличие питания на проводах: 22А, 22В и 22У при этом на схеме цепи должны быть выделены зеленым цветом. Если отсутствует питание на проводе 22В, то необходимо проверить автоматический выключатель QF6 "22В" УПУ (средняя тумба). Если остутствует напряжение на проводах 22В и 22У, установить в шкафу перемычку 15-22В.  Если лампа ЛКиТ сигнализирует, а КВХ не включается, то необходимо поставить ручку БКМ в «М» и нажать кратковременно КВХ, если поезд начнет движение – значит нет минуса и необходимо установить перемычку между проводами 30-30К, проверить реле РПТ - должно быть отключено </string>
    <string name="not_drive1_do3">КВХ включается, лампа ЛКит не сигнализирует - соединить перемычкой на КВХ левую и правую верхнюю пайку 22В - 22М </string>
    <string name="not_drive1_do4">КВХ включается, лампа ЛКиТ сигнализирует - соединить перемычкой на КВХ левую и правую нижнюю пайку 22М – 2 </string>
    <string name="bv_drive">Сработал БВ или дифференциальная защита во время пуска</string>
    <string name="bv_drive_do">Восстановить защиту, при пуске задержать рукоятку контроллера в маневровом положении, перевести в ходовое, если защита не сработала, продолжить движение. В случае повторного срабатывания защиты (общее количество не более 2-х раз) исключить вагон из тяги. В пункте оборота установить изолирующие прокладки в тормозные и реверсивный переключатели неисправного вагона</string>
    <string name="bv_edt">Во время электрического торможения сработал КЗ, на пульте загорелась лампа БВ</string>
    <string name="bv_edt_do">Пробой двигателя на землю или нарушение изоляции силовых цепей, неисправны контакторы Т, ЛКТ, ЛК. Определить вагон и восстановить защиту, если защита повторно сработает в тяге - отключить вагон. Защита сработала не в тяге, а в торможении, отключить кнопку В-8 "Торможение" на неисправном вагоне, убедиться что тормозной переключатель находится в положении Тормоз. На стоянке следует проверить торможение с поднятыми токоприемниками, убедиться что РСВ включается правильно. Если этого не происходит, то неисправен блок САУТ. </string>
    <string name="not_inc_bv">Не восстанавливается защита на всем поезде, горит лампа БВ (лампа К не горит)</string>
    <string name="not_inc_bv_do">Проверить положение ППТ, нет контакта в ППТ 22-22Д (проверить), ППТ 440а-440б (проверить), в случае отсутствия электрического соединения между контактами указанных пар проводов, для вывода электропоезда с перегона допускается установка электрического соединения.  </string>
    <string name="not_inc_oll_bv">Не восстанавливается защита на всем поезде, лампы БВ и К сигнализируют </string>
    <string name="not_inc_oll_bv_do">Проверить контакты в кнопке "Возврат защиты", восстановить БВ с клеммовой рейки (провода 15 - 7, соединение установить на 1-2 секунды), перемычка 22Б - 22В(шкаф№1) и по пульту УПУ наличие питания 22В провода </string>
    <string name="not_inc_oll_bv_psn_work">Не восстанавливается защита на всем поезде, ЛКиТ горит, после нажатия на кнопку "Возврат защиты" и выключения ВУ преобразователи продолжают работать  </string>
    <string name="not_inc_oll_bv_psn_work_do1">Постороннее питание провода 7 от пр. 15. На всех моторных вагонах нужно снять провод 7 с клемовой рейки, БВ восстановить с помощью кнопки "Восстановление защиты" на моторном вагоне. После выключения ВУ и смены кабины управления, снятия напряжения в к/сети или срабатывания защиты на вагоне - действия по восстановлению защиты повторить снова в том же порядке. Если произошло постороннее питание провода №7 в пути следования данная неисправность будет обнаружена только после выключения ВУ или снятия напряжения в к/сети</string>
    <string name="not_inc_one_bv">Не восстанавливается защита на одном из моторных вагонов, лампа БВ горит. </string>
    <string name="not_inc_one_bv_psn_not_work">Не работает ПСН, при восстановлении защиты лампа БВ не гаснет - проверить цепь включения ПРУ: Q-19 на моторном вагоне, блок контакт РББ-1 22П - 17А, РББ-2 17А - 17, не передается 17 провод между моторным и прицепным вагоном, неисправен ПРУ. </string>
    <string name="not_inc_one_bv_psn_work">ПСН работает, БВ не восстанавливается, лампа не гаснет. </string>
    <string name="not_inc_one_bv_psn_work_do">Проверить автоматы Q-21,Q-23,Q-31, неисправен блок БУКЗ, неисправен вентиль БВ, обрыв катушки БВ и КЗ, попадание грязи, льда, посторонних частиц под якорь аппарата.Восстановить автоматы Q-21,Q-23,Q-31, убедиться в наличии напряжения на проводах 66, 67 (Q-41,Q-42 на прицепном или головном вагонах)</string>
    <string name="blok">Неисправность КЛУБ-У,БЛОК,ЭПК </string>
    <string name="blok_diagnostic">Погасание индикации ДС-12. Непрерывный свисток ЭПК. Несоответствие или отсутствие кодирования более 1 блок участка. Неисправность углового датчика скорости. Иные неисправности в соответствии с РЭ и Л-230 </string>
</resources>